# Dais-SDK

./: README.md  llms.txt  pyproject.toml  staged_changes.txt
.github/workflows/: publish.yml  test.yml
docs/: mcp_toolset_architecture.md  mcp_toolset_design.md
examples/: agent_loop.py  anthropic_example.py  async_tool_call.py  debugging.py  generate_text.py  get_model_list.py  json_output.py  list_models.py  one_turn.py  stream_text.py  stream_text_sync.py  tool_call.py  tool_call_stream.py  toolset.py  usage_nonstream.py  usage_stream.py
src/dais_sdk/: __init__.py  param_parser.py  stream.py
src/dais_sdk/core/: llm.py  one_turn.py
src/dais_sdk/mcp_client/: local_mcp_client.py  remote_mcp_client.py
src/dais_sdk/providers/: __init__.py  anthropic.py  base_provider.py  openai.py  utils.py
src/dais_sdk/skill/: __init__.py  resource.py
src/dais_sdk/tool/: __init__.py  execute.py  prepare.py  tool_call_executor.py  types.py  utils.py
src/liteai_sdk/: __init__.py  param_parser.py  stream.py  tool.py  types.py
tests/: conftest.py  test_llm.py  test_python_toolset.py  test_request_params.py  test_stream_events.py  test_stream_message_collector.py  test_thinking_extraction.py  test_tool.py  test_tool_definition.py  test_tool_execution.py  test_tool_normalization.py  test_tool_preparation.py  test_tool_utils.py  test_toolset.py  test_type_conversion.py
tests/mcp_client/: test_everything_server.py
tests/providers/: test_utils.py
tests/skill/: test_skill.py
tests/tool/: test_definition.py  test_exception_handler.py  test_execution.py  test_normalization.py  test_preparation.py  test_utils.py
(+28 files in other folders)
